# nmpc_casadi

./: README.md
nmpc_casadi_multiple_shooting/include/: nmpc_caller.h
nmpc_casadi_multiple_shooting/src/: nmpc_caller.cpp
nmpc_casadi_single_shooting/: CMakeLists.txt
nmpc_casadi_single_shooting/config/: nmpc_config.yaml
nmpc_casadi_single_shooting/include/: nmpc_caller.h
nmpc_casadi_single_shooting/src/: nmpc_caller.cpp
